name:                kai
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/scrambledeggsontoast/kai#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Kirklin
maintainer:          jjvk2@cam.ac.uk
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  other-modules:       Kai.LP, Kai.Lex, Kai.Parse
  build-depends:       base >= 4.7 && < 5, parsec >= 3.1 && < 4, array >=0.5 && < 0.6, bytestring >=0.10 && < 0.11, mtl >= 2.2 && < 2.3, transformers >= 0.4.2 && < 0.6, bytestring-read >= 0.3.1 && < 0.4

  build-tools:         alex, happy
  default-language:    Haskell2010

executable kai-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kai
  default-language:    Haskell2010

test-suite kai-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kai
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/scrambledeggsontoast/kai
